Style fixes for card and card modal and covers

--- a/frontend/src/assets/styles/components/Card.css
+++ b/frontend/src/assets/styles/components/Card.css
@@ -49,9 +49,29 @@
   position: relative;
 }
 
+.card-content--overlay::before {
+  content: "";
+  position: absolute;
+  top: -2rem;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 2rem;
+  background: linear-gradient(
+    180deg,
+    rgba(0, 0, 0, 0) 0%,
+    rgba(0, 0, 0, 0.7) 100%
+  );
+  mix-blend-mode: normal;
+  pointer-events: none;
+  z-index: 0;
+}
+
 .card-content {
+  position: relative;
   display: flex;
-  flex: 1;
+  margin-top: auto;
   flex-direction: column;
   color: var(--gray1);
   border-radius: 0 0 6px 6px;
